Simple video playback working and fixed user descriptions being able to overflow user card and show as null

--- a/src/main/resources/twitter_playback_style.css
+++ b/src/main/resources/twitter_playback_style.css
@@ -214,6 +214,8 @@ h4 {
 .user-desc {
     display: block;
     line-height: 1.3em;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 .following {
